assets/scss/layouts/products/_productGrid.scss
/* ... */
/* Slide Table CSS

@media only screen and (max-width: 767px) {
td.pvcol.sku {
position: fixed;
background: #fff;
box-shadow: none;
line-height: 47px;
width: 100px;
left: 0px;
}

tr.productrow:nth-child(odd) td.pvcol.sku {
background: #eee;
}
th.thcell.pn.static {
width: 100px;
position: fixed;
line-height: 47px;
left: 0px;
}
.productrow {
position: relative;
padding-left: 100px;
display: block;
width: 768px;
}
tr#tableheaders {
display: block;
padding-left: 100px;
}
.price {
width: 68px;
}
th.thcell.pn.atc {
width: 140px;
}
.ProductDim {
width: 148px;
}
.ListDescription {
width: 169px;
}
th.thcell.pn.FitsModel {
width: 143px;
}
}
*/

/* Slide Table Try #2 */



p#swipemsg {
    text-align: center;
    margin-top: -18px;
    font-size: 16px;
    @include breakpoint("medium") {
        display: none;
    }
}

.slidearrow {
    position: absolute;
    height: 30px;
    width: 20px;
    background: rgba(255, 255, 255, .4);
    right: 0px;
    margin-top: -45px;
    height: 60px;
    @include breakpoint("medium") {
        display: none;
    }

}

span.slideabox {
    border-top: 3px #000 solid;
    border-right: 3px #000 solid;
    transform: rotate(45deg);
    display: inline-block;
    height: 12px;
    width: 12px;
    margin-top: 24px;
    -webkit-transform: rotate(-135deg);
    @include breakpoint("medium") {
        display: none;
    }
}

div#dsubcat {
    padding: 0px 20px 20px 20px;
    @include breakpoint("medium") {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: justify;
        -ms-flex-pack: justify;
        justify-content: left;
        flex-flow: wrap;

    }
}

.subcat {
    background: #fff;
    padding: 10px 15px;
    margin-bottom: 10px;
    box-shadow: none;
    font-weight: bold;
    border: 1px solid #ddd;

    @include breakpoint("medium") {
        background: #fff;
        padding: 10px 15px;
        margin-bottom: 10px;
        box-shadow: none;
        font-weight: bold;
        width: calc(25% - 10px);
        margin-right: 5px;
        margin-left: 5px;
    }
}

div#dsubcat .subcat svg {
    top: 0px;
    right: 0px;
}

.subimgwrap {
    text-align: center;
    // min-height: 252px;

    @include breakpoint("medium") {
        min-height: 252px;
        position: relative;
    }
}
.noref th.pvcol.REFID, td.pvcol.CorePrice {
    display: none;
}
div#refImg .schematic-image {
    padding: 20px;
    margin: auto;
    text-align: center;
}
.pvcol.sku a {
    text-decoration: underline;
    font-weight: 600;
}
.pvcol .corecharge {
    font-size: 12px;
}
.modal-btn-wrap {
    display: block;
    text-align: center;
    margin-top: 10px;
}
.modal-btn-wrap .modal-btn {
    background: #ffbe00;
    display: inline-block;
    position: relative;
    font-size: 16px;
    width: auto;
    padding: 15px 13px 10px 13px;
    margin: 5px 5px;
    line-height: 16px;
    top: 0px;
    right: 0px;
    left: 0px;
    height: auto;
    font-family: industry;
    font-weight: 600;
    color: #000;
    text-transform: uppercase;
    cursor: pointer;
}

.modal-btn-wrap span.modal-btn {
    background: #ccc;
}
#pv-detbtm .corecharge {
    font-size: 18px;
    margin-top: -5px;
    @include breakpoint("medium") {
        font-size: 21px;
    }

    &:before {
        content: "+";
        display: inline-block;
        padding-right: 5px;
    }
}

.totalLine {
    margin: 3px 0;
    border-color: #212121;
}
td.pvcol.view-details a {
    display: none;

    @include breakpoint("medium") {
        display: block;
    }
}
th.thcell.pn.vd {
    display: none;

    @include breakpoint("medium") {
        display: table-cell;
    }
}
.listvd {
    display: none;
    @include breakpoint("medium") {
        color: #001212;
        display: inline-block;
        font-family: "industry";
        font-weight: 600;
        text-transform: uppercase;
        cursor: pointer;
        text-align: center;
        text-decoration: underline;
        padding: 10px 5px;
        left: 20px;
    }
}
/* ... */

